  error condition, could cause the application to crash or return stupid error
  messages.
* Bugfix: Issue #119: Fixed problem that caused frame set generation to
  fail sometimes. Seems to be related to the nremap() issue.
* Generally revisited documentation, logging, and display texts. Improved grammar,
  formatting, and fixed quite a few typos that escaped all proofreading sessions.

Important changes in 2.10 (2022-04-26):

* Feature: Issue #123: New command line option to hide files by extension. Example:
  --hide_extensions=jpg,png,cue would stop covers and cue sheets from showing up.
* Feature: Issue #120: Added subtitle support. Subtitle streams can now also be
  transcoded to the output files. Separate SRT or VTT files will be incorporated
  as subtitle streams.
* Bugfix: Fixed memory leak in encode_audio_frame().
* Bugfix: Issue #122: Last song was missing from cuesheet files.
* Bugfix: Issue #129: Files remained zero size when previously transcoded.
* Bugfix: Issue #130: Fix file sizes can be incorrectly reported by ls but are
  correct when data is read.
* Bugfix: Duration was not saved in cache SQLite database.
* Bugfix: Issue #131: Sometimes video parameters for some Blu-ray or DVD chapters
  cannot be detected by FFmpeg API. Transcode then failes - fixed by using data
  from the Blu-ray directory or DVD IFO instead.
* Lowest supported FFmpeg API version raised to 4.1.8 "al-Khwarizmi".
* Dropped libavresample support, library was removed from FFmpeg API after 3.4.9.
* Deprecated previous channel layout API based on uint64 bitmasks.
* Deprecated swr_alloc_set_opts() and swr_build_matrix().
* Going C++17 now: The packet queue has been recoded in C++17 to support
  external subtitles files. As C++17 is required now, why not go all the way:
  Starting to replace legacy C++ and somewhat C-like parts with real C++.
* Using std::shared_ptr to ensure proper memory allocation/free.

Important changes in 2.9 (2022-02-16):
