@@ -1066,13 +1066,13 @@ void ffmpeg_log(void *ptr, int level, const char *fmt, va_list vl)
     }
 #ifdef AV_LOG_TRACE
     // AV_LOG_INFO     32
-    else if (level <= AV_LOG_INFO)
-    {
-        ffmpegfs_level = LOGINFO;
-    }
+    //else if (level <= AV_LOG_INFO)
+    //{
+    //    ffmpegfs_level = LOGINFO;
+    //}
     // AV_LOG_VERBOSE  40
     // AV_LOG_DEBUG    48
-    else if (level <= AV_LOG_DEBUG)
+    else if (level < AV_LOG_DEBUG)
     {
         ffmpegfs_level = LOGDEBUG;
     }
